# CryptoBerryBot

./: .cookiecutter.json  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/crypto_berry_bot/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
